🐛 fix: update asset names in release configuration for admin and user applications

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -144,11 +144,11 @@
         "assets": [
           {
             "path": "admin.tar.gz",
-            "name": "ppanel-admin-${nextRelease.version}.tar.gz"
+            "name": "ppanel-admin-web.tar.gz"
           },
           {
             "path": "user.tar.gz",
-            "name": "ppanel-user-${nextRelease.version}.tar.gz"
+            "name": "ppanel-user-web.tar.gz"
           }
         ]
       }
